# atomcam-meteor-detector

./: .gitignore  README.md  pyproject.toml
atomcam_meteor/: __init__.py  __main__.py  _logging.py  cli.py  config.py  exceptions.py  hooks.py  pipeline.py
atomcam_meteor/modules/: compositor.py  concatenator.py  detector.py  downloader.py  extractor.py
atomcam_meteor/services/: db.py  lock.py  prefectures.py  schedule_resolver.py  scheduler.py  twilight.py
atomcam_meteor/web/: app.py  dependencies.py  routes.py
atomcam_meteor/web/templates/: admin.html  base.html  index.html  night.html
atomcam_meteor/web/templates/components/: clip_card.html  schedule_settings.html  video_player.html
config/: settings.example.yaml
docs/: raspberry-pi-setup.md  reference-comparison-kin-hasegawa.md  setup.md  specs.md  testing.md
tests/: conftest.py  test_cli.py  test_compositor.py  test_concatenator.py  test_config.py  test_db.py  test_detector.py  test_downloader.py  test_extractor.py  test_hooks.py  test_lock.py  test_pipeline.py  test_prefectures.py  test_schedule_resolver.py  test_scheduler.py  test_twilight.py  test_web.py
